# VulkanRTXQueryDemo

./: CMakeLists.txt  README.md
resources/: shadowQuery.frag  shadowQuery.frag.spv  shadowQuery.vert  shadowQuery.vert.spv
src/: main.cpp
